# icfpc2015

./: .gitignore  .travis.yml  Honeycomb.hs  LICENSE  README.md  highscores.hs  icfpc2015.cabal  submit.hs
burst/: Main.hs
outputs/: 0pt-problem0-seed0-2-24-38.348943000000.json  0pt-problem0-seed0-2-24-40.456909000000.json  0pt-problem0-seed0-2-24-41.785740000000.json  1010pt-problem2-seed2-5-15-43.961355000000.json  1011pt-problem1-seed0-5-9-41.192483000000.json  1015pt-problem2-seed5-5-32-2.679203000000.json  1030pt-problem21-seed0-2-47-29.780685000000.json  1036pt-problem8-seed0-15-18-27.167395000000.json  1054pt-problem14-seed0-5-22-40.282901000000.json  1060pt-problem5-seed9-5-47-22.256150000000.json  1064pt-problem12-seed9-20-55-6.764079000000.json  1064pt-problem12-seed9-5-55-23.817993000000.json  1065pt-problem12-seed8-20-51-40.944164000000.json  1068pt-problem12-seed3-19-2-14.733665000000.json  1068pt-problem12-seed3-5-52-22.684007000000.json  1070pt-problem21-seed0-2-47-46.124442000000.json  1070pt-problem21-seed0-20-15-37.047717000000.json  1080pt-problem4-seed28-20-48-58.434776000000.json  1080pt-problem4-seed28-5-38-17.485873000000.json  1080pt-problem4-seed47-21-7-57.215169000000.json  1086pt-problem14-seed0-18-34-47.213355000000.json  1098pt-problem21-seed0-2-47-10.052129000000.json  1104pt-problem4-seed39-20-59-1.554547000000.json  1104pt-problem4-seed39-5-39-50.483349000000.json  1108pt-problem21-seed0-20-15-18.745873000000.json  1118pt-problem8-seed7-5-26-46.909319000000.json  1130pt-problem11-seed4-5-51-23.427356000000.json  1130pt-problem21-seed0-20-15-22.229409000000.json  1172pt-problem14-seed0-18-35-42.113566000000.json  1187pt-problem14-seed0-18-34-54.852590000000.json  1194pt-problem2-seed0-12-10-22.805950000000.json  1200pt-problem4-seed3-18-49-9.763345000000.json  1200pt-problem4-seed3-5-35-45.574718000000.json  1204pt-problem4-seed23-20-44-0.183510000000.json  1204pt-problem4-seed23-5-37-32.015375000000.json  1212pt-problem4-seed11-18-57-21.082545000000.json  1215pt-problem2-seed5-5-17-21.453416000000.json  1225pt-problem2-seed8-5-18-31.282377000000.json  1225pt-problem2-seed8-5-33-1.696549000000.json  12339pt-problem8-seed8-22-43-32.636104000000.json  (+1091 more)
play_cui/: Main.hs
src/: Board.hs  Cell.hs  Command.hs  CommandStringOptimization.hs  Display.hs  Game.hs  PRNG.hs  Play.hs  Sandbox.hs  Score.hs  Types.hs  Unit.hs  Util.hs
src/Tactics/: Hybrid.hs  RandomWalk.hs  RandomWalk2.hs  RandomZigZag.hs  Reynolds.hs  SearchAllLocking.hs  SimpleFor1.hs  SimpleFor1b.hs  Util.hs
test/: Test.hs
tools/: burst.hs  correct_output_filename.hs  davar.hs  highscores.hs  play_cui.hs  replay.hs  submit.hs
viewer/: Viewer.hs  Viewer.js  viewer.html
