name:                icfpc2015
version:             0.1.0.0
-- synopsis:            
-- description:
homepage:            http://github.com/msakai/icfpc2015
license:             BSD3
license-file:        LICENSE
author:              Team Sampou
maintainer:          masahiro.sakai@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:       Board
                       , Cell
                       , Command
                       , Game
                       , Types
                       , Unit
                       , PRNG
                       , Util
                       , Display
                       , Play
                       , Tactics.RandomZigZag
  -- other-modules:       
  -- other-extensions:    
  build-depends:       aeson >= 0.9
                     , array
                     , base >=4.7 && <4.9
                     , boxes
                     , bytestring >=0.10 && <1.0
                     , containers >= 0.5.5
                     , directory >=1.2 && <1.3
                     , random >=1.1
                     , transformers >= 0.4.2
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  Type:              exitcode-stdio-1.0
  HS-Source-Dirs:    test
  Main-is:           Test.hs
  Build-depends:
                    base
                , HUnit
                , QuickCheck >=2.5 && <3
                , containers
                , icfpc2015
                , tasty >=0.10.1
                , tasty-hunit ==0.9.*
                , tasty-quickcheck ==0.8.*
                , tasty-th
                , transformers >= 0.4.2
  Default-Language: Haskell2010
  Other-Extensions: TemplateHaskell

executable submit
  Main-is: submit.hs
  Build-Depends:
      base
    , bytestring
    , http-client
    , http-client-tls
    , icfpc2015
  Default-Language: Haskell2010

