name:                icfpc2015
version:             0.1.0.0
-- synopsis:            
-- description:
homepage:            http://github.com/msakai/icfpc2015
license:             BSD3
license-file:        LICENSE
author:              Team Sampou
maintainer:          masahiro.sakai@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md, src/CommandStringOptimization.hs
cabal-version:       >=1.10

library
  exposed-modules:       Board
                       , Cell
                       , Command
                       , Game
                       , Types
                       , Unit
                       , PRNG
                       , Score
                       , Util
                       , Display
                       , Play
                       --, CommandStringOptimization
                       , Tactics.RandomZigZag
                       , Tactics.RandomWalk
                       , Tactics.RandomWalk2
                       , Tactics.SimpleFor1
                       , Tactics.SimpleFor1b
                       , Tactics.Reynolds
                       , Tactics.SearchAllLocking
                       , Tactics.Hybrid
                       , Tactics.Util
  -- other-modules:       
  -- other-extensions:    
  build-depends:       aeson >= 0.9
                     , array
                     , base >=4.7 && <4.9
                     , boxes
                     , bytestring >=0.10 && <1.0
                     , containers >= 0.5.5
                     , directory >=1.2 && <1.3
                     , random >=1.1
                     , time >=1.5
                     , transformers >= 0.4.2
                     , http-client >= 0.4.18
                     , http-client-tls >= 0.2.2
                     , unbounded-delays >=0.1
                     -- , toysolver >=0.3.0 && <0.4.0
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  Type:              exitcode-stdio-1.0
  HS-Source-Dirs:    test
  Main-is:           Test.hs
  Build-depends:
                    base
                , HUnit
                , QuickCheck >=2.5 && <3
                , containers
                , split
                , Glob
                , icfpc2015
                , tasty >=0.10.1
                , tasty-hunit ==0.9.*
                , tasty-quickcheck ==0.8.*
                , tasty-th
                , transformers >= 0.4.2
  Default-Language: Haskell2010
  Other-Extensions: TemplateHaskell

executable submit
  HS-Source-Dirs: tools
  Main-is: submit.hs
  Build-Depends:
      base
    , bytestring
    , aeson
    , http-client
    , http-client-tls
    , icfpc2015
  Default-Language: Haskell2010

executable davar
  HS-Source-Dirs: tools
  Main-is: davar.hs
  Build-Depends:
      base
    , bytestring
    , aeson
    , icfpc2015
  Default-Language: Haskell2010

executable play_cui
  HS-Source-Dirs: tools
  Main-is: play_cui.hs
  Build-Depends:
      base
    , icfpc2015
  Default-Language: Haskell2010

executable replay
  HS-Source-Dirs: tools
  Main-is: replay.hs
  Build-Depends:
      base
    , containers
    , icfpc2015
  Default-Language: Haskell2010

executable burst
  HS-Source-Dirs: tools
  Main-is: burst.hs
  Build-Depends:
      base
    , icfpc2015
  Default-Language: Haskell2010

executable highscores
  HS-Source-Dirs: tools
  Main-is: highscores.hs
  Build-Depends:
      base
    , split
    , directory >=1.2
  Default-Language: Haskell2010

executable correct_output_filename
  HS-Source-Dirs: tools
  Main-is: correct_output_filename.hs
  Build-Depends:
      base
    , split
    , filepath
    , Glob
    , process
    , icfpc2015
  Default-Language: Haskell2010
